@@ -1,0 +1,3 @@
+one
+zero
+other one
