@@ -13,6 +13,135 @@
 extern AST *genPrintf(AST *);
 
 static void
+AddLabel(AST *ast)
+{
+    if (!ast->left || ast->left->kind != AST_IDENTIFIER) {
+        ERROR(ast, "Label is not an identifier");
+    } else {
+        const char *name = ast->left->d.string;
+        Symbol *sym = FindSymbol(&curfunc->localsyms, name);
+        if (sym) {
+            WARNING(ast, "Redefining %s as a label", name);
+        }
+        AddSymbol(&curfunc->localsyms, name, SYM_LOCALLABEL, 0);
+    }
+}
+
+static AST *
+CreateGotos(AST *tmpvar, AST *switchstmt, AST *stmt, AST **defaultlabel, AST *endswitch)
+{
+    AST *labelid;
+    AST *label;
+    if (!stmt) {
+        return switchstmt;
+    }
+    AstReportAs(stmt);
+    switch (stmt->kind) {
+    case AST_CASE:
+        ERROR(stmt, "Internal error, case not transformed");
+        return switchstmt;
+    case AST_CASEITEM:
+    {
+        AST *ifgoto;
+        AST *ifcond;
+
+        labelid = AstTempIdentifier("_case_");
+        label = NewAST(AST_LABEL, labelid, NULL);
+        AddLabel(label);
+        ifcond = AstOperator(K_EQ, tmpvar, stmt->left);
+        *stmt = *NewAST(AST_STMTLIST, label,
+                        NewAST(AST_STMTLIST, stmt->right, NULL));
+        ifgoto = NewAST(AST_GOTO, labelid, NULL);
+        ifgoto = NewAST(AST_STMTLIST, ifgoto, NULL);
+        ifgoto = NewAST(AST_THENELSE, ifgoto, NULL);
+        ifgoto = NewAST(AST_IF, ifcond, ifgoto);
+        switchstmt = AddToList(switchstmt, NewAST(AST_STMTLIST, ifgoto, NULL));
+        return switchstmt;
+    }
+    case AST_OTHER:
+        if (defaultlabel) {
+            if (*defaultlabel) {
+                ERROR(stmt, "Switch already has a default label");
+            }
+            labelid = AstTempIdentifier("_case_");
+            *defaultlabel = labelid;
+            label = NewAST(AST_LABEL, labelid, NULL);
+            AddLabel(label);
+            *stmt = *NewAST(AST_STMTLIST, label,
+                            NewAST(AST_STMTLIST, stmt->left, NULL));
+        } else {
+            ERROR(stmt, "Internal error, got default when not expecting it");
+        }
+        return switchstmt;
+    case AST_QUIT:
+        if (endswitch) {
+            *stmt = *NewAST(AST_GOTO, endswitch, NULL);
+        }
+        return switchstmt;
+    // for loops, "break" cannot have special meaning any more
+    case AST_WHILE:
+    case AST_DOWHILE:
+    case AST_FOR:
+    case AST_FORATLEASTONCE:
+        endswitch = NULL;
+        // fall through
+    case AST_STMTLIST:
+    case AST_IF:
+    case AST_SEQUENCE:
+    case AST_COMMENTEDNODE:
+        switchstmt = CreateGotos(tmpvar, switchstmt, stmt->left, defaultlabel, endswitch);
+        return CreateGotos(tmpvar, switchstmt, stmt->right, defaultlabel, endswitch);
+    default:
+        return switchstmt;
+    }
+    return switchstmt;
+}
+
+//
+// transform a case statement
+// we evaluate _tmpvar = expr
+// then construct a series of statements like:
+//  if (_tmpvar == case1expr) goto case1label
+// for each case found within the stmt
+//
+static AST *
+CreateSwitch(AST *expr, AST *stmt)
+{
+    AST *casetype;
+    AST *tmpvar;
+    AST *endswitch;
+    AST *switchstmt = NULL;
+    AST *defaultlabel = NULL;
+    AST *gostmt;
+    AST *endlabel;
+
+    AstReportAs(stmt);
+    casetype = ExprType(expr);
+    tmpvar = AstTempLocalVariable("_tmp_", casetype);
+    endswitch = AstTempIdentifier("_endswitch");
+    
+    switchstmt = NewAST(AST_STMTLIST, AstAssign(tmpvar, expr), NULL);
+    // find all CASE labels within stmt; turn them into labels, and
+    // create if(tmpvar == val) goto label;
+
+    endlabel = NewAST(AST_LABEL, endswitch, NULL);
+    AddLabel(endlabel);
+    
+    // switchstmt will have all the gotos
+    switchstmt = CreateGotos(tmpvar, switchstmt, stmt, &defaultlabel, endswitch);
+    // add a "goto default"
+    if (!defaultlabel) {
+        defaultlabel = endswitch;
+    }
+    gostmt = NewAST(AST_GOTO, defaultlabel, NULL);
+    switchstmt = AddToList(switchstmt, NewAST(AST_STMTLIST, gostmt, NULL));
+    switchstmt = AddToList(switchstmt, stmt);
+    switchstmt = AddToList(switchstmt,
+                           NewAST(AST_STMTLIST, endlabel, NULL));
+    return switchstmt;
+}
+
+static void
 doCTransform(AST **astptr)
 {
     AST *ast = *astptr;
@@ -80,16 +209,7 @@ doCTransform(AST **astptr)
         curfunc->local_address_taken = 1;
         break;
     case AST_LABEL:
-        if (!ast->left || ast->left->kind != AST_IDENTIFIER) {
-            ERROR(ast, "Label is not an identifier");
-        } else {
-            const char *name = ast->left->d.string;
-            Symbol *sym = FindSymbol(&curfunc->localsyms, name);
-            if (sym) {
-                WARNING(ast, "Redefining %s as a label", name);
-            }
-            AddSymbol(&curfunc->localsyms, name, SYM_LOCALLABEL, 0);
-        }
+        AddLabel(ast);
         break;
     case AST_COGINIT:
         doCTransform(&ast->left);
@@ -106,6 +226,12 @@ doCTransform(AST **astptr)
         if (ast->left && ast->left->kind == AST_PRINT) {
             *ast = *genPrintf(ast);
         }
+        break;
+    case AST_CASE:
+        doCTransform(&ast->left);
+        doCTransform(&ast->right);
+        AstReportAs(ast->left);
+        *ast = *CreateSwitch(ast->left, ast->right);
         break;
     default:
         doCTransform(&ast->left);
