@@ -1,5 +1,7 @@
 Version 3.9.12
 - Added varargs to C
+- Implemented switch in C
+- Implemented enums in C
 - Fixed a BASIC operator precedence problem (<< and >> should have
   been like * and /)
 - Allowed plain EXIT and CONTINUE in BASIC
